lang/tests/snapshots/semantic/undefined_variable_repeated.snap
---
source: lang/tests/semantic.rs
---
error: undefined variable `b`
   ╭─[ test.zippel:1:40 ]
   │
 1 │ proto p<F: Field>(instance a: F) where b == b { }
   │                                        ┬    ┬  
   │                                        ╰─────── `b` is not defined in this scope
   │                                        │    │  
   │                                        │    ╰── `b` also used here
   │                                        │       
   │                                        ╰─────── help: did you mean `a`?
───╯
