lang/tests/snapshots/semantic/unresolved_group_ref.snap
---
source: lang/tests/semantic.rs
---
error: unresolved group reference `G`
   ╭─[ test.zippel:1:20 ]
   │
 1 │ proto p<P: Pairing<G, H>>(instance a: F) where a == a { }
   │                    ┬  
   │                    ╰── `G` is not declared as a type variable
   │                    │  
   │                    ╰── help: declare `G` as a type variable with `Group` kind
───╯

---
error: unresolved group reference `H`
   ╭─[ test.zippel:1:23 ]
   │
 1 │ proto p<P: Pairing<G, H>>(instance a: F) where a == a { }
   │                       ┬  
   │                       ╰── `H` is not declared as a type variable
   │                       │  
   │                       ╰── help: declare `H` as a type variable with `Group` kind
───╯
