lang/tests/snapshots/semantic/w0001_shadowed_arg.snap
---
source: lang/tests/semantic.rs
---
warning: unused variable `a`
   ╭─[ test.zippel:1:25 ]
   │
 1 │ fn f<F: Field>(instance a: F, instance b: F) -> F { let a = b; a }
   │                         ┬  
   │                         ╰── `a` is bound but never used
   │                         │  
   │                         ╰── help: if this is intentional, prefix it with an underscore
───╯
