lang/tests/snapshots/semantic/w0001_unused_let.snap
---
source: lang/tests/semantic.rs
---
warning: unused variable `x`
   ╭─[ test.zippel:1:42 ]
   │
 1 │ fn f<F: Field>(instance a: F) -> F { let x = a; a }
   │                                          ┬  
   │                                          ╰── `x` is bound but never used
   │                                          │  
   │                                          ╰── help: if this is intentional, prefix it with an underscore
───╯
